Fix tooltip z-index to appear above product images

--- a/src/app/item/[slug]/blurb.module.scss
+++ b/src/app/item/[slug]/blurb.module.scss
@@ -43,7 +43,7 @@
 .tooltip {
     visibility: hidden;
     position: absolute;
-    z-index: 1;
+    z-index: 9999;
     top: 100%;
     left: 50%;
     transform: translateX(-50%);
